[project]
name = "mra-signalrecovery"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ffmpeg>=1.4",
    "matplotlib>=3.9.2",
    "pyqt6>=6.8.0",
    "scipy>=1.14.1",
    "torch>=2.5.1",
    "torchtyping>=0.1.5",
]

[tool.uv]
cache-dir = "/mimer/NOBACKUP/groups/bengt/axejan/.cache/uv"